DDW-418 - Align vertically the "News feed empty" message - container update item fixes

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -123,6 +123,7 @@
         text-align: center;
       }
     }
+
     .newsFeedList {
       height: calc(100% - 104px);
       overflow-x: hidden;
@@ -130,8 +131,10 @@
       padding: 0 20px 20px 0;
       position: absolute;
       width: calc(100% - 20px);
+
       &.hasUpdate {
         height: calc(100% - 220px);
+        margin-top: 115px;
       }
     }
   }
